src/test/resources/valid_programs/incr_decr__incr_int_simple.notc
void main() {
    int i = 23;
    i++;
    printInt(i);
    ++i;
    printInt(i);


    // Behavior around zero

    int j = -2;
    j++;
    printInt(j);
    j++;
    printInt(j);
    j++;
    printInt(j);

    int k = -2;
    ++k;
    printInt(k);
    ++k;
    printInt(k);
    ++k;
    printInt(k);
}
