src/test/resources/syntax_errors/not_terminated_assignment.notc
void main() {
    int i = 4
}
